<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XNWHelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="file_selector">文件选择</string>
    <string name="pre">上一个</string>
    <string name="next">下一个</string>
    <string name="auto_login">自动登录</string>
    <string name="input_rate">输入间隔秒数</string>
    <string name="app_login">登录器</string>
    <string name="longclick_choose">长按选择数据文件</string>
    <string name="select_url">输入网址</string>
    <string name="encode_error">info文件格式错误，转换为UTF8再试</string>   
    <string-array
        name="errors"
        >
        <item>"参数token不能为空"</item>
		<item>"参数action不能为空"</item>
		<item>"参数action错误"</item>
		<item>"token失效"</item>
		<item>"用户名或密码错误"</item>
		<item>"用户名不能为空"</item>
		<item>"密码不能为空"</item>
		<item>"账户余额不足"</item>
		<item>"账户被禁用"</item>
		<item>"参数错误"</item>
		
		<item>"账户待审核"</item>
		<item>"登录数达到上限"</item>
		
		<item>"参数itemid不能为空"</item>
		<item>"项目不存在"</item>
		<item>"项目未启用"</item>
		<item>"暂时没有可用的号码"</item>
		<item>"获取号码数量已达到上限"</item>
		<item>"参数mobile不能为空"</item>
		<item>"号码已被释放"</item>
		<item>"号码已离线"</item>
		<item>"发送内容不能为空"</item>
		
		<item>"尚未收到短信"</item>
		<item>"等待发送"</item>
		<item>"正在发送"</item>
		<item>"发送失败"</item>
		<item>"订单不存在"</item>
		<item>"专属通道不存在"</item>
		<item>"专属通道未启用"</item>
		<item>"专属通道密码与项目不匹配"</item>
		
		<item>"系统错误"</item>
		<item>"系统异常"</item>
		<item>"系统繁忙"</item>
    </string-array>
        
</resources>
