<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <WebView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:focusable="false" />
    <ImageView 
        android:id="@+id/initview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="48dp"
        android:focusable="false"
        android:src="@drawable/android"
        />
    <LinearLayout
        android:id="@+id/info_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0c9c9c9"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#a9a9a9a9" />

        <LinearLayout
            android:id="@+id/info_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#ff5500"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_pre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pre" />

            <TextView
                android:id="@+id/info"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical" />

            <Button
                android:id="@+id/bt_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#a9a9a9a9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#aaff5500"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/input_rate" />

            <EditText
                android:id="@+id/input_rate"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"
                android:text="10" />

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/auto_login" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="#aaff5500"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/select_url" />
            <EditText
	            android:id="@+id/edit_url"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="http://www.xnw.com"
	            />
        </LinearLayout>    
        <ListView
            android:id="@+id/login_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </ListView>
    </LinearLayout>

</FrameLayout>